src/test/ui/type-alias-enum-variants-priority.stderr
error: ambiguous associated item
  --> $DIR/type-alias-enum-variants-priority.rs:14:15
   |
LL |     fn f() -> Self::V { 0 }
   |               ^^^^^^^ help: use fully-qualified syntax: `<E as Trait>::V`
   |
   = note: #[deny(ambiguous_associated_items)] on by default
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #57644 <https://github.com/rust-lang/rust/issues/57644>
note: `V` could refer to variant defined here
  --> $DIR/type-alias-enum-variants-priority.rs:4:5
   |
LL |     V
   |     ^
note: `V` could also refer to associated type defined here
  --> $DIR/type-alias-enum-variants-priority.rs:8:5
   |
LL |     type V;
   |     ^^^^^^^

error: aborting due to previous error

